src/routes/styles.css
@charset "utf-8";
@import "@fontsource/fira-mono";

:root {
  --font-big: "Barlow Condensed", sans-serif;
  --font-small: "Montserrat", sans-serif;

  --beige: #fff3e8;
  --purple: #a8a6c2;
  --white: #ffffff;

  --blue-25: #f7f8fd;
  --blue-50: #e8eaf6;
  --blue-100: #95a5f2;
  --blue-300: #637af1;
  --blue-500: #4a65f0;
  --blue-700: #384db8;
  --blue-900: #2a3254;

  --pink-50: #ffefef;
  --pink-100: #ffd4d4;
  --pink-300: #fcbcbc;
  --pink-500: #f8a9a9;
  --pink-700: #e49696;

  --gray-50: #e8e8ef;
  --gray-100: #d2d2d9;
  --gray-300: #b6b6be;
  --gray-500: #555555;

  --text: var(--blue-900);
  --background: var(--beige);
  --background-alt: var(--white);
  --primary: var(--blue-500);
  --pirmary-shadow: var(--blue-700);
  --secondary: var(--pink-500);
  --secondary-hover: var(--pink-700);
  --border-dark: 1px solid var(--gray-300);
  --border-light: 1px solid var(--gray-100);

  --br: 1rem;
  --br-small: 0.5rem;
  --shadow: 0rem 0.25rem 0 var(--gray-500);
  --shadow-down: 0 0.25rem 0 var(--gray-500);
  --icon-size: 1.5rem;
  --nav-height: 4rem;
  font-family: var(--font-small);
  font-size: 1.125rem;
}

/* body.dark {
  --secondary: #10162f;
  --background: rgb(45, 45, 45);
  --text: #d5c8bc;
  --accent: rgb(159, 159, 255);
  --accent2: #ac8282;
  --border: 1px solid #555;
  --border-light: 1px solid #555;
  --primary: #74708b;
  --shadow: none;
  --shadow-down: none;
} */

html {
  scroll-behavior: smooth;
}

body {
  background-color: var(--background);
  color: var(--text);
}

h1,
h2,
h3 {
  font-family: var(--font-big);
}

h1,
h2,
h3,
h4 {
  font-weight: 700;
}

h1,
h2,
h3 {
  line-height: 90%;
}

h1 {
  font-size: 6rem;
}
h2 {
  font-size: 4rem;
}
h3 {
  font-size: 2.25rem;
}
h4 {
  font-size: 1.25rem;
}
h5 {
  font-size: 1.25rem;
}
h6 {
  font-size: 1rem;
}

p {
  font-size: 1rem;
}

small {
  font-size: 0.5rem;
  display: block;
}

@media screen and (max-width: 700px) {
  h1 {
    font-size: 4rem;
  }
  h2 {
    font-size: 3rem;
  }
  h3 {
    font-size: 2rem;
  }
}

@media screen and (max-width: 400px) {
  h1 {
    font-size: 3.5rem;
  }
  h2 {
    font-size: 2.75rem;
  }
  h3 {
    font-size: 1.5rem;
  }
  h4,
  h5 {
    font-size: 1rem;
  }
  p {
    font-size: 0.8rem;
  }
}

form {
  display: flex;
  flex-direction: column;
  gap: 0.5rem;
  margin-top: 1rem;
}
input {
  width: 100%;
  padding: 1rem;
  margin-bottom: 2rem;
  border: 1px solid var(--text);
  background-color: var(--gray-100);
}
input:focus {
  background-color: var(--background-alt);
  outline: 1px solid var(--text);
}
*:focus-visible {
  /* text-decoration: underline; */
  outline: 2px solid var(--text);
  outline-offset: 0.25rem;
}

b {
  font-weight: 700;
}

i {
  font-style: italic;
}

button.cta {
  background-color: var(--primary);
  color: var(--background-alt);
  cursor: pointer;
  /* border: 1px solid var(--primary); */
  font-weight: 700;
  padding: 1rem 1.5rem;
}

button.ghost {
  color: var(--primary);
  font-weight: 700;
  padding: 1rem 1.5rem;
}

.float {
  transition: transform 0.1s, background-color 0.1s;
}

.hide {
  display: none !important;
}

.popup {
  background-color: var(--background-alt);
  box-shadow: var(--shadow);
  border: var(--border-dark);
}

.card-grid {
  display: grid;
  grid-template-columns: repeat(2, 1fr);
  gap: 1.25rem;
}

.tiles-bg {
  position: relative;
  overflow: hidden;
  border-top: var(--border-dark);
  border-bottom: var(--border-dark);
}
.tiles-bg:before {
  content: "";
  background-color: var(--text);
  position: absolute;
  width: 100rem;
  height: 100rem;
  top: 50%;
  left: 50%;
  background: url(/images/tiles-white.png);
  background-size: 20rem;
  opacity: 0.1;
  transform: translate(-50%, -50%) rotate(45deg);
}
body.dark .tiles-bg {
  color: black;
  background-color: var(--background-alt);
  color: var(--text);
}

.mobile {
  display: none;
}
.link.color {
  color: var(--primary);
}

.icon {
  width: var(--icon-size);
  height: var(--icon-size);
}

.invert {
  background-color: var(--text);
  color: var(--background-alt);
}

.flex-col {
  display: flex;
  flex-direction: column;
  gap: 1rem;
  padding: 1rem 0;
  align-items: center;
}

@media screen and (max-width: 600px) {
  :root {
    --icon-size: 1.25rem;
  }
  .card-grid {
    gap: 0.5rem;
    grid-template-columns: 1fr;
  }

  .desktop {
    display: none;
  }
  .mobile {
    display: block;
  }
}

@media screen and (max-width: 500px) {
  :root {
    font-size: 1rem;
  }
}

@media (hover: hover) {
  button.ghost:hover {
    background-color: rgba(0, 0, 0, 0.05);
  }
  button.cta:hover {
    background-color: var(--blue-300);
  }
  .float:hover {
    transform: translateY(-0.25rem);
  }
  .link:hover {
    text-decoration: underline;
  }
  /* 
  .link-animation {
    position: relative;
    text-decoration: none;
    color: var(--text);
  }

  .link-animation:before {
    content: "";
    display: block;
    position: absolute;
    width: 0;
    height: 5%;
    background-color: var(--text);
    bottom: 0;
    transition: 0.5s;
  }

  .link-animation:hover:before {
    width: 100%;
  } */
}

/* @media screen and (max-width: 400px) {
  .card-grid {
    grid-template-columns: 1fr;
  }
} */

button:has(svg) {
  display: flex;
  align-items: center;
  justify-content: center;
  width: min-content;
}

button.cta:disabled {
  opacity: 0.5;
  color: var(--text);
}

button:disabled:hover {
  cursor: not-allowed;
}

